2000-11-20  John Harper  <jsh@eazel.com>

	* sawfish/wm/stacking.jl (raise-window, lower-window,
	stack-window-above, stack-window-below, restack-window,
	window-on-top-p): use stacking-order instead of
	stacked-mapping-order. Otherwise strange things can happen when
	unmapped windows are present (e.g. fixes #4824 where raising a
	nautilus window with (eq user-raise-type 'groups) also raises
	the desktop window..)

	* sawfish/wm/viewport.jl (move-window-to-current-viewport,
	set-window-viewport): don't move sticky-viewport windows

	* sawfish/wm/animation/outline.jl (make-outline-animator): new
	exported function. Fixes #4816

	* sawfish/wm/focus.jl: removed all code to support the
	focus-click-through option on non-client windows (mfleming
	convinced me it was a bad idea, and it fixes a hard bug)

	* sawfish/wm/focus.jl (focus-within-click-event): new fluid,
	set to t when calling a command from within the click-to-focus
	event

	* sawfish/wm/commands/raise-commands.jl (replay-pointer):
	function to do the replaying, dependent on whether or not we're
	in the click-to-focus event or not

	* sawfish/wm/state/wm-spec.jl: support SKIP_PAGER state (linked
	to the `window-list-skip' property)

	(honour-client-state): set `no-history' property of panels

	(honour-client-state): fixed typo of _NET_WM_WINDOW_STATE
	instead of _NET_WM_STATE

	(update-workspace-hints): for sticky windows, set
	_NET_WM_DESKTOP to #xffffffff instead of deleting it

	(define-wm-spec-window-state): records the names of all
	registered states in `supported-states' variable
	(supported-state-p): new function

	(client-message-handler): deleted _NET_INSERT_DESKTOP and
	_NET_DELETE_DESKTOP messages, they're not in the spec anymore?
	Fixed paren bug in _NET_ACTIVE_WINDOW message handler

2000-11-16  John Harper  <jsh@eazel.com>

	* sawfish/wm/state/gnome.jl (gnome-honour-client-state): set
	the `no-history' property of panel windows

	* sawfish/wm/custom.jl: new defcustom option `:widget-flags'
