@@ -1,3 +1,12 @@
+2000-11-21  John Harper  <jsh@eazel.com>
+
+	* sawfish/wm/workspace.jl, sawfish/wm/ext/audio-events.jl,
+	sawfish/wm/util/groups.jl: put titles of some list widgets into
+	the actual title of the list, not above the list widget
+
+	* sawfish/wm/ext/audio-events.jl (audio-events-alist): now in
+	`intermediate' user-level
+
 2000-11-20  John Harper  <jsh@eazel.com>
 
 	* sawfish/wm/stacking.jl (raise-window, lower-window,
